PPXDCS-1 Fix newlines and formatting

--- a/xdcs-agent-api/pom.xml
+++ b/xdcs-agent-api/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <grpc.version>1.20.0</grpc.version><!-- CURRENT_GRPC_VERSION -->
+        <grpc.version>1.20.0</grpc.version>
         <protobuf.version>3.7.1</protobuf.version>
         <protoc.version>3.7.1</protoc.version>
     </properties>
@@ -52,7 +52,7 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.2</version>
-            <scope>provided</scope> <!-- not needed at runtime -->
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
@@ -125,5 +125,4 @@
             </plugin>
         </plugins>
     </build>
-    
 </project>
