--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,13 @@
     <version>0.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
+    <properties>
+        <swagger-codegen-version>3.0.8</swagger-codegen-version>
+    </properties>
     <modules>
         <module>xdcs-agent-api</module>
         <module>xdcs-server</module>
+        <module>xdcs-rest-api</module>
     </modules>
 
     <dependencyManagement>
@@ -25,6 +29,11 @@
                 <groupId>pl.edu.agh.xdcs</groupId>
                 <artifactId>xdcs-agent-api</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger.codegen.v3</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <version>${swagger-codegen-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
