--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,7 @@ jobs:
       script:
         - cd xdcs-agent
         - pyb -X install_build_dependencies
+        - pyb -X install_dependencies
         - pyb -X package
         - pyb -X run_unit_tests
         - pyb -X publish
