--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,24 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- INTERNAL -->
+            <dependency>
+                <groupId>pl.edu.agh.xdcs</groupId>
+                <artifactId>xdcs-server</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.edu.agh.xdcs</groupId>
+                <artifactId>xdcs-agent-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.edu.agh.xdcs</groupId>
+                <artifactId>xdcs-rest-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <!-- EXTERNAL -->
             <dependency>
                 <groupId>javax</groupId>
                 <artifactId>javaee-api</artifactId>
@@ -85,6 +103,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.8.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.wildfly.plugins</groupId>
+                    <artifactId>wildfly-maven-plugin</artifactId>
+                    <version>2.0.1.Final</version>
+                    <configuration>
+                        <java-opts>
+                            <java-opt>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8787</java-opt>
+                        </java-opts>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
