--- a/xdcs-server/pom.xml
+++ b/xdcs-server/pom.xml
@@ -5,10 +5,47 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>xdcs-server</artifactId>
+    <packaging>war</packaging>
+
     <parent>
         <groupId>pl.edu.agh.xdcs</groupId>
         <artifactId>xdcs</artifactId>
         <version>0.1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <wildfly.hostname>127.0.0.1</wildfly.hostname>
+        <wildfly.port>32090</wildfly.port>
+        <wildfly.username>deploy</wildfly.username>
+        <wildfly.password>deploy</wildfly.password>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>pl.edu.agh.xdcs</groupId>
+            <artifactId>xdcs-rest-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <finalName>xdcs-server</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
