--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <protoc.version>3.7.1</protoc.version>
         <junit.version>4.12</junit.version>
         <mockito.version>2.25.1</mockito.version>
+        <guava.version>27.1-jre</guava.version>
+        <lombok.version>1.18.8</lombok.version>
     </properties>
 
     <modules>
@@ -61,16 +63,6 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>pl.edu.agh.xdcs</groupId>
-                <artifactId>xdcs-server</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>pl.edu.agh.xdcs</groupId>
-                <artifactId>xdcs-agent-api</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>javax.annotation</groupId>
                 <artifactId>javax.annotation-api</artifactId>
                 <version>1.2</version>
@@ -92,6 +84,16 @@
                 <artifactId>mockito-core</artifactId>
                 <version>${mockito.version}</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
