--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run generate && ng build",
+    "build": "npm run generate && ng build && npm run war",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
