--- a/xdcs-frontend/Dockerfile.debug
+++ b/xdcs-frontend/Dockerfile.debug
@@ -7,4 +7,5 @@ WORKDIR /var/xdcs/xdcs-frontend
 
 EXPOSE 8080
 
-CMD npm install && npm run generate && ng build && ng serve --host 0.0.0.0 --port 8080
+CMD npm install && npm run generate && ng build && \
+  ng serve --host 0.0.0.0 --port 8080 --proxy-config proxy.conf.json
