--- a/xdcs-rest-api/src/main/openapi/api.yaml
+++ b/xdcs-rest-api/src/main/openapi/api.yaml
@@ -24,6 +24,7 @@ paths:
       parameters:
         - in: path
           name: agentId
+          required: true
           schema:
             type: string
       responses:
