--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -27,8 +27,7 @@
     "core-js": "^3.1.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "ng-openapi-gen": "~0.4.0"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
@@ -50,6 +49,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "^5.18.0",
-    "typescript": "~3.4.0"
+    "typescript": "~3.4.0",
+    "ng-openapi-gen": "~0.4.0"
   }
 }
