--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,7 +2,7 @@ FROM maven:3-jdk-8 AS builder
 
 WORKDIR /var/xdcs
 COPY . /var/xdcs/
-RUN mvn -T 6 -DskipTests=true clean install
+RUN mvn -T 1.2C -DskipTests=true clean install
 
 ################################################################################
 
@@ -10,5 +10,11 @@ FROM jboss/wildfly:17.0.0.Final
 
 COPY --from=builder /var/xdcs/xdcs-server/target/xdcs-server.war /opt/jboss/wildfly/standalone/deployments/
 
+# HTTP REST services
 EXPOSE 8080
+
+# GRPC services
 EXPOSE 8081
+
+# SSH services
+EXPOSE 8082
