--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <swagger-annotations.version>1.5.21</swagger-annotations.version>
         <jackson.version>2.9.9</jackson.version>
         <jackson-databind.version>2.9.9.1</jackson-databind.version>
+        <sshd.version>2.3.0</sshd.version>
+        <javassist.version>3.25.0-GA</javassist.version>
     </properties>
 
     <modules>
@@ -134,6 +136,16 @@
                 <groupId>com.fasterxml.jackson.jaxrs</groupId>
                 <artifactId>jackson-jaxrs-json-provider</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.sshd</groupId>
+                <artifactId>sshd-core</artifactId>
+                <version>${sshd.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${javassist.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
