--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "bootstrap": "~4.3.1",
     "core-js": "^3.1.4",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
