--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/angular-fontawesome": "~0.4.0",
+    "@primer/octicons": "^9.1.1",
     "bootstrap": "~4.3.1",
     "core-js": "^3.1.4",
+    "ngx-bootstrap": "^5.1.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
