--- a/xdcs-server/Dockerfile
+++ b/xdcs-server/Dockerfile
@@ -1,7 +1,5 @@
 FROM jboss/wildfly:17.0.0.Final
 
-COPY ./target/xdcs-server.war /opt/jboss/wildfly/standalone/deployments/
-
 EXPOSE 8080
 EXPOSE 8081
 EXPOSE 8082
@@ -20,5 +18,8 @@ COPY debug-configure.cli /tmp/debug-configure.cli
 RUN cd /opt/jboss/wildfly/bin && /opt/jboss/wildfly/bin/jboss-cli.sh --file=/tmp/debug-configure.cli
 
 RUN rm -rf /opt/jboss/wildfly/standalone/configuration/standalone_xml_history/current
+
+COPY ./xdcs-config.xml /opt/jboss/wildfly/
+COPY ./target/xdcs-server.war /opt/jboss/wildfly/standalone/deployments/
 
 CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0"]
