PPXDCS-30 Create a simple certificate-based authorization for agents

--- a/xdcs-server/Dockerfile
+++ b/xdcs-server/Dockerfile
@@ -19,7 +19,8 @@ RUN cd /opt/jboss/wildfly/bin && /opt/jboss/wildfly/bin/jboss-cli.sh --file=/tmp
 
 RUN rm -rf /opt/jboss/wildfly/standalone/configuration/standalone_xml_history/current
 
-COPY ./xdcs-config.xml /opt/jboss/wildfly/
+COPY dev/xdcs-config.xml /opt/jboss/wildfly/
+COPY dev/key.pub /opt/jboss/wildfly/
 COPY ./target/xdcs-server.war /opt/jboss/wildfly/standalone/deployments/
 
 CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0"]
