--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "npm run generate && ng build && npm run war",
-    "test": "ng test --karmaConfig=karma.conf.js",
+    "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "war": "cd ./dist/xdcs-frontend && zip -r ../xdcs-frontend.war .",
@@ -31,7 +31,9 @@
     "ngx-bootstrap": "^5.1.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "ng2-ace-editor": "~0.3.9",
+    "angular-split": "^3.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
