PPXDCS-38 Add server-side auth

--- a/xdcs-server/Dockerfile
+++ b/xdcs-server/Dockerfile
@@ -21,6 +21,7 @@ RUN rm -rf /opt/jboss/wildfly/standalone/configuration/standalone_xml_history/cu
 
 COPY dev/xdcs-config.xml /opt/jboss/wildfly/
 COPY dev/key.pub /opt/jboss/wildfly/
+COPY dev/shadow /opt/jboss/wildfly/
 COPY ./target/xdcs-server.war /opt/jboss/wildfly/standalone/deployments/
 
 CMD ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0"]
