--- a/xdcs-server/pom.xml
+++ b/xdcs-server/pom.xml
@@ -77,11 +77,18 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
         <finalName>xdcs-server</finalName>
         <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/resources</directory>
+            </resource>
             <resource>
                 <directory>${project.basedir}/src/main/xsd</directory>
             </resource>
