--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -15,6 +15,7 @@ services:
   xdcs-server:
     build:
       context: ./xdcs-server
+      dockerfile: Dockerfile
     ports:
       - "32080:8080"
       - "32081:8081"
