--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <assertj.version>3.11.1</assertj.version>
         <junit5.version>5.5.1</junit5.version>
         <commons-lang3.version>3.9</commons-lang3.version>
+        <jjwt.version>0.10.7</jjwt.version>
     </properties>
 
     <modules>
@@ -192,6 +193,23 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>${jjwt.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId>
+                <version>${jjwt.version}</version>
+                <scope>runtime</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
