--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -33,7 +33,8 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
     "ng2-ace-editor": "~0.3.9",
-    "angular-split": "^3.0.2"
+    "angular-split": "^3.0.2",
+    "@auth0/angular-jwt": "^3.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
