PPXDCS-53 Add authorization for agents
* Move APIs to /api directory
* Move web security to web package
* Add AgentSecurity GRPC service
* Add AgentSecurityInformationProvider
* Identify agents by their names
* Add Python GRPC interceptor which adds headers

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -2,8 +2,8 @@ FROM python:3.7 AS builder
 
 RUN pip install pybuilder --pre
 
+COPY api /var/xdcs/api
 COPY xdcs-agent /var/xdcs/xdcs-agent
-COPY xdcs-agent-api/src /var/xdcs/xdcs-agent-api/src
 
 WORKDIR /var/xdcs/xdcs-agent
 
