PPXDCS-60 Implement REST API for task definitions
* Add PathUtils
* Add Workspace interface
* Add AutoClosingInputStream
* Add TaskDefinitionService
* Add WorkspaceService
* Add FilesystemRepository
* Add REST mappers

--- a/xdcs-rest-api/pom.xml
+++ b/xdcs-rest-api/pom.xml
@@ -73,6 +73,7 @@
                                 <java8>true</java8>
                                 <sourceFolder>src/gen/java</sourceFolder>
                                 <dateLibrary>java8</dateLibrary>
+                                <returnResponse>true</returnResponse>
                             </configOptions>
                         </configuration>
                     </execution>
