--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -16,7 +16,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref:  '#/components/schemas/AgentEntryDto'
+                  $ref: '#/components/schemas/AgentEntryDto'
 
   /agents/{agentId}:
     get:
@@ -33,7 +33,251 @@ paths:
           content:
             application/json:
               schema:
-                $ref:  '#/components/schemas/AgentInfoDto'
+                $ref: '#/components/schemas/AgentInfoDto'
+
+  /task-definitions:
+    get:
+      tags:
+        - Task Definitions
+      operationId: getTaskDefinitions
+      parameters:
+        - in: query
+          name: from
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+            default: 20
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskDefinitionsDto'
+    post:
+      tags:
+        - Task Definitions
+      operationId: createTaskDefinition
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TaskDefinitionDto'
+      responses:
+        201:
+          description: Created
+          headers:
+            Location:
+              description: Address of the newly created resource
+              schema:
+                type: string
+
+  /task-definitions/{taskDefinitionId}:
+    get:
+      tags:
+        - Task Definitions
+      operationId: getTaskDefinition
+      parameters:
+        - in: path
+          name: taskDefinitionId
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TaskDefinitionDto'
+
+  /task-definitions/{taskDefinitionId}/workspace:
+    get:
+      tags:
+        - Task Definitions
+      operationId: getTaskDefinitionWorkspaceFile
+      parameters:
+        - in: path
+          name: taskDefinitionId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: path
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FileDto'
+    put:
+      tags:
+        - Task Definitions
+      operationId: setTaskDefinitionWorkspaceFile
+      parameters:
+        - in: path
+          name: taskDefinitionId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FileDto'
+      responses:
+        200:
+          description: OK
+
+  /task-definitions/{taskDefinitionId}/workspace/content:
+    get:
+      tags:
+        - Task Definitions
+      operationId: getTaskDefinitionWorkspaceFileContent
+      parameters:
+        - in: path
+          name: taskDefinitionId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: path
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
+    put:
+      tags:
+        - Task Definitions
+      operationId: setTaskDefinitionWorkspaceFileContent
+      parameters:
+        - in: path
+          name: taskDefinitionId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/octet-stream:
+            schema:
+              type: string
+              format: binary
+      responses:
+        204:
+          description: OK
+
+  /deployments:
+    post:
+      tags:
+        - Deployments
+      operationId: deployTaskDefinition
+      parameters:
+        - in: query
+          name: from
+          description: Task definition ID which should be deployed
+          required: true
+          schema:
+            type: string
+      responses:
+        201:
+          description: OK
+
+  /deployments/{deploymentId}:
+    get:
+      tags:
+        - Deployments
+      operationId: getDeployment
+      parameters:
+        - in: path
+          name: deploymentId
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DeploymentDto'
+
+  /deployments/{deploymentId}/workspace:
+    get:
+      tags:
+        - Deployments
+      operationId: getDeploymentFile
+      parameters:
+        - in: path
+          name: deploymentId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: path
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FileDto'
+
+  /deployments/{deploymentId}/workspace/content:
+    get:
+      tags:
+        - Deployments
+      operationId: getDeploymentFileContent
+      parameters:
+        - in: path
+          name: deploymentId
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: path
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: OK
+          content:
+            application/octet-stream:
+              schema:
+                type: string
+                format: binary
 
 
 components:
@@ -64,3 +308,48 @@ components:
         name:
           type: string
 
+    TaskDefinitionDto:
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+
+    TaskDefinitionsDto:
+      type: object
+      properties:
+        items:
+          type: array
+          items:
+            $ref: '#/components/schemas/TaskDefinitionDto'
+        from:
+          type: integer
+        total:
+          type: integer
+
+    DeploymentDto:
+      type: object
+      properties:
+        taskDefinitionId:
+          type: string
+        parent:
+          type: string
+        root:
+          type: string
+
+    FileDto:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [regular, directory, link]
+        permissions:
+          type: string
+        children:
+          type: array
+          items:
+            type: string
+      required:
+        - type
+        - permissions
