PPXDCS-43 Implement agent registering

--- a/api/rest/api.yaml
+++ b/api/rest/api.yaml
@@ -304,8 +304,10 @@ components:
         status:
           type: string
           enum:
-            - online
             - offline
+            - unavailable
+            - ready
+            - busy
 
     TaskDefinitionDto:
       type: object
