--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ jobs:
       script:
         - cd xdcs-frontend
         - npm install
+        - npm run lint
         - npm run build
 
     - name: "Build & test agent"
