--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@angular/cdk": "^8.2.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.19",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/angular-fontawesome": "~0.4.0",
     "@primer/octicons": "^9.1.1",
     "bootstrap": "~4.3.1",
@@ -34,7 +36,10 @@
     "zone.js": "~0.9.1",
     "ng2-ace-editor": "~0.3.9",
     "angular-split": "^3.0.2",
-    "@auth0/angular-jwt": "^3.0.0"
+    "@auth0/angular-jwt": "^3.0.0",
+    "angular-tree-component": "~8.4.1",
+    "ngx-contextmenu": "~5.2.0",
+    "ngx-clipboard": "^12.2.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
@@ -49,14 +54,14 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-firefox-launcher": "~1.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-firefox-launcher": "~1.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.2",
+    "ng-openapi-gen": "~0.6.0",
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
-    "tslint": "^5.18.0",
-    "typescript": "~3.4.0",
-    "ng-openapi-gen": "~0.4.0"
+    "tslint": "^5.20.0",
+    "typescript": "~3.4.5"
   }
 }
