--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <hibernate.version>5.4.7.Final</hibernate.version>
         <h2.version>1.4.199</h2.version>
         <bouncycastle.provider.version>1.46</bouncycastle.provider.version>
+        <commons-io.version>2.6</commons-io.version>
     </properties>
 
     <modules>
@@ -229,6 +230,11 @@
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk16</artifactId>
                 <version>${bouncycastle.provider.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
