--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.0",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/core": "~8.1.0",
@@ -22,24 +23,24 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
-    "@angular/cdk": "^8.2.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@auth0/angular-jwt": "^3.0.0",
     "@fortawesome/angular-fontawesome": "~0.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@primer/octicons": "^9.1.1",
+    "angular-split": "^3.0.2",
+    "angular-tree-component": "~8.4.1",
     "bootstrap": "~4.3.1",
     "core-js": "^3.1.4",
+    "ng2-ace-editor": "~0.3.9",
     "ngx-bootstrap": "^5.1.1",
+    "ngx-clipboard": "^12.2.1",
+    "ngx-contextmenu": "~5.2.0",
+    "ngx-spinner": "8.0.1",
     "rxjs": "~6.5.2",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "ng2-ace-editor": "~0.3.9",
-    "angular-split": "^3.0.2",
-    "@auth0/angular-jwt": "^3.0.0",
-    "angular-tree-component": "~8.4.1",
-    "ngx-contextmenu": "~5.2.0",
-    "ngx-clipboard": "^12.2.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
