--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -39,6 +39,7 @@
     "ngx-contextmenu": "~5.2.0",
     "ngx-spinner": "8.0.1",
     "rxjs": "~6.5.2",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
