--- a/xdcs-frontend/package.json
+++ b/xdcs-frontend/package.json
@@ -66,6 +66,7 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "^5.20.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "~3.4.5"
   }
 }
